# english-learning-feedback

./: .gitignore  Dockerfile  README.md  playground.ipynb  pyproject.toml
.github/workflows/: auth-test.yaml  deploy_cloudrun.yaml  exec_test.yaml
bash/: deploy.sh
playground/: _transcription.py  etl_playground.ipynb  playground.ipynb  s2p.py
src/: driver.py  main.py
src/infra/: firebase.py  gemini.py  s2p.py
src/models/: audio.py  conversation.py  duration.py  message.py  suggested_item.py  suggestion.py  suggestion_detail.py  time_frame.py  transcription.py  user.py  word_count.py
src/repository/: conversation.py  suggestion.py  transcription.py  word_count.py
src/service/: _transcription.py  audio.py  conversation.py  suggestion.py  transcription.py  transform_data.py
