[tool.poetry]
name = "english-learning-feedback"
version = "0.1.0"
description = ""
authors = ["yusuke <theshoreunder@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-speech = "^2.27.0"
google = "^3.0.0"
notebook = "^7.2.1"
google-generativeai = "^0.7.2"
langchain-google-genai = "^1.0.8"
google-cloud-aiplatform = "^1.61.0"
flask = "^3.0.3"
datetime = "^5.5"
regex = "^2024.7.24"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
